--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,3 +37,4 @@ jobs:
         run: |
           make deploy
           make invoke
+          awslocal sqs receive-message --queue-url http://localhost:4566/000000000000/test | grep LocalStack
