--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           docker pull localstack/localstack-pro &
           pip install localstack terraform-local awscli-local[ver1]
+          # TODO: tmp fix until SQS protocol issue is resolved
+          pip install botocore==1.31.80
           localstack start -d
 
       - name: Run tests
